--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,56 @@ inc/
 /MANIFEST.bak
 /pm_to_blib
 /*.zip
+
+# Editor/OS artifacts
+.DS_Store
+.idea/
+.vscode/
+*.swp
+*.swo
+*.tmp
+*.log
+.prove
+
+# Profiling
+nytprof/
+
+# Local deps
+local/
+!Build/
+.last_cover_stats
+/META.yml
+/META.json
+/MYMETA.*
+*.o
+*.pm.tdy
+*.bs
+
+# Devel::Cover
+cover_db/
+
+# Devel::NYTProf
+nytprof.out
+
+# Dist::Zilla
+/.build/
+
+# Module::Build
+_build/
+Build
+Build.bat
+
+# Module::Install
+inc/
+
+# ExtUtils::MakeMaker
+/blib/
+/_eumm/
+/*.gz
+/Makefile
+/Makefile.old
+/MANIFEST.bak
+/pm_to_blib
+/*.zip
 # Local::Lib vendored deps
 local/
